2010-10-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/stash.c:
   Fix build with GLib 2.8.


2010-10-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.h, src/socket.c, src/Makefile.am, src/ui_utils.c,
   configure.ac, doc/geany.txt, doc/geany.html, wscript, TODO:
   Revert X11 workspace socket support as it needs more work; moved
   to workspace-sockets branch.


2010-10-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/geanywraplabel.c:
   Fix build with GLib 2.8.
 * src/dialogs.c, src/about.c, THANKS:
   Group Open dialog encoding options by submenus (patch by Adam Ples,
   thanks; #3047717).
 * scintilla/LexLisp.cxx, scintilla/makefile.win32,
   scintilla/KeyWords.cxx, scintilla/Makefile.am, src/highlighting.c,
   src/about.c, src/filetypes.c, src/filetypes.h, THANKS,
   data/filetype_extensions.conf, data/filetypes.lisp, wscript:
   Add Lisp filetype (patch by Mário Silva, thanks).
   Note: Lisp lexer was taken from Scintilla instead.


2010-10-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * po/kk.po, THANKS, src/about.c:
   Added Kazakh translation. Thanks to Baurzhan Muftakhidinov for
   providing.


2010-10-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/utils.h, src/highlighting.c, src/editor.c:
   Don't cache overridden lexer properties.
   Add foreach_strv() to plugin API.
   Add utils_strv_join().
 * tagmanager/basic.c:
   Parse property, constructor, destructor as functions (patch by
   pottersson, thanks; #2992167).


2010-10-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/tools.c, doc/geany.txt, doc/geany.html:
   Fix passing quoted arguments when using 'Send Selection to'. This
   means sed 's/\./(dot)/g' now works.
 * src/editor.c:
   Add snippet keybinding support for keys in user snippets.conf (based
   on patch by Eugene Arshinov, thanks). No docs yet.
 * doc/geany.txt, doc/geany.html: