@@ -33,7 +33,7 @@
 /*
 *   DATA DECLARATIONS
 */
-typedef enum { COMMENT_NONE, COMMENT_C, COMMENT_CPLUS } Comment;
+typedef enum { COMMENT_NONE, COMMENT_C, COMMENT_CPLUS, COMMENT_D } Comment;
 
 enum eCppLimits {
 	MaxCppNestingLevel = 20,
@@ -444,6 +444,8 @@ static Comment isComment (void)
 		comment = COMMENT_C;
 	else if (next == '/')
 		comment = COMMENT_CPLUS;
+	else if (next == '+')
+		comment = COMMENT_D;
 	else
 	{
 		fileUngetc (next);
@@ -491,6 +493,33 @@ static int skipOverCplusComment (void)
 			fileGetc ();  /* throw away next character, too */
 		else if (c == NEWLINE)
 			break;
+	}
+	return c;
+}
+
+/* Skips over a D style comment.
+ * Really we should match nested /+ comments. At least they're less common.
+ */
+int skipOverDComment (void)
+{
+	int c = fileGetc ();
+
+	while (c != EOF)
+	{
+		if (c != '+')
+			c = fileGetc ();
+		else
+		{
+			const int next = fileGetc ();
+
+			if (next != '/')
+				c = next;
+			else
+			{
+				c = SPACE;  /* replace comment with space */
+				break;
+			}
+		}
 	}
 	return c;
 }
@@ -614,6 +643,8 @@ process:
 					if (c == NEWLINE)
 						fileUngetc (c);
 				}
+				else if (comment == COMMENT_D)
+					c = skipOverDComment ();
 				else
 					Cpp.directive.accept = FALSE;
 				break;
