@@ -1,3 +1,9 @@
+2010-10-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * tagmanager/get.c:
+   Ignore D /+ +/ comments.
+
+
 2010-10-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/stash.c:
